Implemented new design elements to improve the visual appeal of the desktop view.

--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #eef5ff;
 }
+@media screen and (min-width: 1024px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+  }
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
